--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+.DS_Store
+/storage/.DS_Store
+/storage/app/.DS_Store
+/storage/app/public/.DS_Store
+/storage/app/public/images/.DS_Store
