--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,9 @@
         "fideloper/proxy": "^4.0",
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.6.*",
+        "laravel/nova": "*",
         "laravel/tinker": "^1.0",
-        "laravel/nova": "*"
+        "r64/nova-image-cropper": "^1.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
